# Agentic-AI-course

./: .gitignore  Requirements  Setup  Setup_mac  Setup_windows  pyproject.toml
Agents-Frameworks/Agno/: 01_Lab_Basics.ipynb  02_Lab_Memory.ipynb  03_Lab_Session_Management.ipynb  04_Lab_Tools.ipynb  05_Lab_Multiple_Models.ipynb  agno_memory.db  agno_sessions.db
Agents-Frameworks/CrewAI/: 01_Lab_Research_Report.py  02_Lab_AI_Startup.ipynb  02_Lab_AI_Startup.py  03_Lab_Financial_Analysis.py  04_Lab_Code_builder_Reviewer.py  05_Lab_Strategic_Planning.ipynb  05_Lab_Strategic_Planning.py  06_Lab_React_Pattern_Showcase.py
Basics/: 1_Lab_Ollama_Simple.ipynb  2_Lab_Ollama_Interactive.ipynb  3_Lab_HF_Simple.ipynb  4_Lab_HF_Interactive.ipynb  5_Lab_OpenAI.ipynb  6_Lab_OpenAI_Memory.ipynb  chat_memory.json
General/: 0_Lab_Tiktoken.ipynb  1_Lab_SQL.ipynb  2_Lab_insertSQL.ipynb  3_Lab_Ollama_SQL_Interaction.ipynb  4_Lab_Ollama_SQLInsights.py  55_Lab_AudioSummarizer_1.ipynb  5_Lab_AudioSummarizer.ipynb  66_Lab_Youtube.ipynb  6_Lab_Youtube.ipynb
Governance/: 01_Lab_Factbased.ipynb  02_Lab_Email_Writer.ipynb  03_Lab_Tutor.ipynb  04_Lab_Financial_Advisor.ipynb
MCP/: 01_Lab_File_MCP.ipynb  02_Lab_File_MCP_logs.ipynb  03_Lab_MCP_Server_Simple.py  04_Lab_MCP_Client_Simple.py  05_Lab_MCP_Postgres.py  06_Lab_Google.py  11_Lab_File_MCP.ipynb  mcp.json  output.html
Monitoring/: 1_Lab_Langfuse.py
Tools/: 1_Lab_SearchToolsAPI.ipynb
Utility/: 01_Lab_Tokens_Budget.ipynb  02_Lab_Chunking_Strategies.ipynb
VectorDB/: 1_Lab_QdrantIngest.ipynb  2_Lab_InteractiveIngestQdrant.ipynb  3_Lab_QdrantQuery.ipynb  4_Lab_StreamlitQdrant.py
(+29 files in other folders)
